--- a/style.css
+++ b/style.css
@@ -36,10 +36,11 @@ footer
 }
 #reset, #save
 {
-    width: 10%;
-    border: 3px solid red;
-    color: red;
-    margin-left: 45%;
+    width: 20%;
+    border: 3px solid rgb(161, 13, 13);
+    background-color: coral;
+    color: rgb(128, 13, 13);
+    margin-left: 40%;
 }
 #inc, #dec
 {
